Fix mobile menu spacing to flex

--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body {
 .red { color: #a83232; }
 .white { color: white; }
 .bold { font-weight: bold; }
-.link-black { text-decoration: none; color: black; }
+.link-remove-format { text-decoration: none; color: inherit; }
 
 /* Header / Navigation Bar */
 header {
@@ -135,7 +135,7 @@ header .navbar a:hover:not(.active) {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-evenly; 
 }
 
 nav.mobile-menu {
@@ -143,36 +143,33 @@ nav.mobile-menu {
     position: absolute;
     top: 50px;
     left: 0;
-    height: 305px;
     width: 100%;
     background-color: rgb(180, 180, 180);
     overflow: visible;
-    box-shadow: 2px 2px 3px #333;
+    box-shadow: 3px 3px 3px #333;
     z-index: 999;
+
 }
 
 header .mobile-navbar a {
-    padding: 15px 20px;
+    padding: 15px 20px; /* reduced padding so it's more uniform */
     font-weight: bold;
     color: black;
+    display: block; 
+    width: 100%; 
+	text-wrap: nowrap;
 }
 
 header .mobile-navbar.active {
     background-color: #a83232;
     border-radius: 25px;
-    transform: scale(1.1);
     color: white;
-}
-
-header .mobile-navbar a:hover:.active {
-    transform: scale(1.1);
 }
 
 header .mobile-navbar a:hover:not(.active) {
     background-color: #333;
     color: white;
     border-radius: 25px;
-    transition: 0.3s;
 }
 
 nav.mobile-menu.open {
@@ -181,7 +178,10 @@ nav.mobile-menu.open {
 
 nav.mobile-menu li {
     list-style: none;
-    margin: 20px;
+    border-radius: 25px;
+    width: 100%; 
+    text-align: center;
+	margin: 5px;
 }
 
 /* Hide/Unhide Elements for Mobile View */
@@ -282,6 +282,12 @@ main {
 }
 
 /* Content "Tile" Containers (w/ Background and Animation) */
+/* Ensure the link covers the entire tile */
+.tile-link {
+    text-decoration: none;
+    color: inherit;
+}
+
 .content-body > div.tile {
     background-color: rgb(180, 180, 180);
     box-shadow: 2px 2px 3px #333;
@@ -291,6 +297,12 @@ main {
     margin: 20px;
     text-align: center;
     cursor: pointer;
+}
+
+.content-body > div.tile a {
+  	width:100%;
+  	height:100%;
+  	z-index: 9999;
 }
 
 .content-body > div.tile:hover {
@@ -374,7 +386,7 @@ footer {
     font-weight: bold;
 }
 
-footer h3, p {
+footer p {
 	padding: 5px;
 	margin: 0px;
 }
